{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 255,
  "lineage": "3109c6d1-fcbb-dcb6-f176-6817fd16fa9b",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "adb_application_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "adb_network_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "adb-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": []
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "adb-private-rt-assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "adb-pubic-rt-assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "private_nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/networkSecurityGroups/private_nsg",
            "location": "eastus",
            "name": "private_nsg",
            "resource_group_name": "rg-natefleming-trial",
            "security_rule": [],
            "tags": {
              "product_id": "13684"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "public_nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/networkSecurityGroups/public_nsg",
            "location": "eastus",
            "name": "public_nsg",
            "resource_group_name": "rg-natefleming-trial",
            "security_rule": [],
            "tags": {
              "product_id": "13684"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/26"
            ],
            "delegation": [
              {
                "name": "adb_delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/virtualNetworks/natefleming-trial-vnet/subnets/public_subnet",
            "name": "public_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-natefleming-trial",
            "service_endpoints": [
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "natefleming-trial-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.64/26"
            ],
            "delegation": [
              {
                "name": "adb_delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/virtualNetworks/natefleming-trial-vnet/subnets/private_subnet",
            "name": "private_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-natefleming-trial",
            "service_endpoints": [
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "natefleming-trial-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/virtualNetworks/natefleming-trial-vnet/subnets/privatelink_subnet",
            "name": "privatelink_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-natefleming-trial",
            "service_endpoints": [
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "natefleming-trial-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "subnet4",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.192/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/virtualNetworks/natefleming-trial-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-natefleming-trial",
            "service_endpoints": [
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "natefleming-trial-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/virtualNetworks/natefleming-trial-vnet/subnets/public_subnet",
            "network_security_group_id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/networkSecurityGroups/public_nsg",
            "subnet_id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/virtualNetworks/natefleming-trial-vnet/subnets/public_subnet"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/virtualNetworks/natefleming-trial-vnet/subnets/private_subnet",
            "network_security_group_id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/networkSecurityGroups/private_nsg",
            "subnet_id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/virtualNetworks/natefleming-trial-vnet/subnets/private_subnet"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e3b01cab-f449-4bd0-9907-f688252d4cc2",
            "id": "/subscriptions/f9747349-bf24-4afc-9500-d20ed3d2f97b/resourceGroups/rg-natefleming-trial/providers/Microsoft.Network/virtualNetworks/natefleming-trial-vnet",
            "location": "eastus",
            "name": "natefleming-trial-vnet",
            "resource_group_name": "rg-natefleming-trial",
            "tags": {
              "product_id": "13684"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}